fix api to match new data model
