# medication-api/src/main/java/com/dispenser/medication/web/rest/MedicationApiDelegateImpl.java
@@ -7,7 +7,8 @@ import java.util.Optional;
 import java.util.List;
 import java.util.ArrayList;
 import java.net.URI;
-import java.time.LocalDate;
+import java.time.OffsetDateTime;
+import java.time.ZoneId;
 
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
@@ -31,20 +32,34 @@ public class MedicationApiDelegateImpl implements MedicationApiDelegate {
   }
 
   @Override
-  public ResponseEntity<List<Medication>> findMedsByName(String name) {
-      List<String> contraindications = new ArrayList<>();
-      Medication medication = new Medication();
-      medication.setContraindications(contraindications);
-      Long id = 1L;
-      Long patient_id = 1L;
+  public ResponseEntity<List<Medication>> getByPatientId(Integer patient_id) {
 
-      medication.setId(id);
-      medication.setPatientId(patient_id);
-      medication.setName("Acetaminophen");
-      medication.setNihUrl("https://druginfo.nlm.nih.gov/drugportal/name/acetaminophen");
-      medication.setStatus(Medication.StatusEnum.AVAILABLE);
+      List<String> contraindications = new ArrayList<>();
+      contraindications.add("Ethanol");
+      contraindications.add("Morphine");
+      contraindications.add("Warfarin");
+      Medication medicationOne = new Medication();
+      medicationOne.setContraindications(contraindications);
+      Integer id = 1;
+      OffsetDateTime date = OffsetDateTime.now(ZoneId.systemDefault());
+      medicationOne.setId(id);
+      medicationOne.setPatientId(patient_id);
+      medicationOne.setDoseDate(date);
+      medicationOne.setName("Acetaminophen");
+      medicationOne.setNihUrl("https://druginfo.nlm.nih.gov/drugportal/name/acetaminophen");
+
+      id = 2;
+      Medication medicationTwo = new Medication();
+      medicationOne.setContraindications(contraindications);
+      medicationTwo.setId(id);
+      medicationTwo.setPatientId(patient_id);
+      medicationTwo.setDoseDate(date);
+      medicationTwo.setName("Ibuprofen");
+      medicationTwo.setNihUrl("https://druginfo.nlm.nih.gov/drugportal/name/ibuprofen");
+
       List<Medication> medicationList = new ArrayList<>();
-      medicationList.add(medication);
+      medicationList.add(medicationOne);
+      medicationList.add(medicationTwo);
       return ResponseEntity.ok(medicationList);
   }
 }
